<resources>
    <string name="app_name">Bonk</string>
    <string name="title_activity_main">Bonk</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_no_account">No Account? Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Search</string>
    <string name="title_login">Log In to Bonk</string>
    <string name="title_signup">Sign Up for Bonk</string>
    <string name="prompt_repass">Repeat Password</string>
    <string name="action_new_acc">Create Account</string>
    <string name="existing_acc">Already Have an Account?</string>
    <string name="error_login">Password or Email is incorrect</string>
    <string name="no_match_pass">Passwords Do Not Match</string>
    <string name="error_signup">An Error Occurred</string>
    <string name="username_input">Username</string>
    <string name="pfp_btn">Choose a profile picture</string>
    <string name="about_input">Add a bio (Optional)…</string>
    <string name="finish_acc_cre">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_bar">Search Users, Posts &amp; More</string>
    <string name="user_photo">User Profile Photo</string>
    <string name="view_profile">View</string>
    <string name="channel_name">Messages</string>
    <string name="channel_desc">Notifications for messages you receive</string>
    <string name="title_chats">Chats</string>
    <string name="chat_search_bar">Search Chats…</string>
    <string name="chats_chat_image">Chat Image</string>
    <string name="post_row_pfp">User Profile Picture</string>
    <string name="expand_post">Show Full</string>
    <string name="new_post_placeholder">What\'s on your mind?</string>
    <string name="title_new_post">Make a New Post</string>
    <string name="new_post_btn">Post it!</string>
    <string name="attach_image_to_post">Add a picture</string>
    <string name="attach_camera_image_to_post">Add a picture with camera</string>
    <string name="image">Image</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="save_profile_changes">Save Changes</string>
    <string name="logout">Log Out</string>
    <string name="posting___">Posting…</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="message">Message</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="zero">0</string>
</resources>