<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.EditProfileActivity"
    android:textAlignment="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/post_row_pfp"
            android:id="@+id/change_pfp_btn"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:id="@+id/change_username_box"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/username_input"
            android:padding="10dp" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_about_box"
        android:textSize="16sp"
        android:hint="@string/about_input"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:padding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password"
        android:textSize="16sp"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:autofillHints="password"
        android:padding="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_profile_changes"
        android:textSize="16sp"
        android:padding="10dp"
        android:onClick="saveChanges"
        android:id="@+id/save_changes" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_out"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:textColor="@color/colour_palate_3"
        android:text="@string/logout"
        android:padding="10dp"
        android:onClick="logOut" />

</LinearLayout>