<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/email2"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="@string/prompt_email"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTitle" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="@string/prompt_password"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <EditText
        android:id="@+id/password3"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="@string/prompt_password"
        android:ems="10"
        android:hint="@string/prompt_repass"
        android:inputType="textPassword"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="306dp"
        android:layout_height="153dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="cursive"
        android:text="@string/title_signup"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="121dp"
        android:onClick="onSignUpClicked"
        android:text="@string/action_new_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/white"
        android:onClick="onExistingAccClicked"
        android:text="@string/existing_acc"
        android:textColor="@color/colour_palate_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/errorSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/error_signup"
        android:textColor="#CC0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTitle"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/noMatchPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_match_pass"
        android:textColor="#D80000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTitle"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>