<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="@string/prompt_email"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="@string/prompt_password"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="306dp"
        android:layout_height="153dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="cursive"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="161dp"
        android:onClick="onSignInClicked"
        android:text="@string/action_sign_in"
        android:theme="@style/mainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/noAccButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="149dp"
        android:backgroundTint="@color/white"
        android:onClick="onNoAccClicked"
        android:text="@string/action_no_account"
        android:textColor="@color/colour_palate_3"
        android:theme="@style/otherButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/errorLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="31dp"
        android:text="@string/error_login"
        android:textColor="#DF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>