<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSetupActivity">

    <ImageButton
        android:id="@+id/pfpChooser"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="153dp"
        android:contentDescription="@string/pfp_btn"
        android:onClick="choosePfp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile_black_24dp" />

    <EditText
        android:id="@+id/usernameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="105dp"
        android:autofillHints="display name"
        android:ems="10"
        android:hint="@string/username_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfpChooser"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/aboutBox"
        android:layout_width="299dp"
        android:layout_height="143dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/about_input"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameBox"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/finishAccCreationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="166dp"
        android:backgroundTint="@color/colour_palate_2"
        android:onClick="done"
        android:text="@string/finish_acc_cre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutBox"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>