<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserViewerActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:elevation="5dp"
        android:layout_marginTop="64dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/user_viewer_pfp_thing_card"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:elevation="12dp"
            app:cardCornerRadius="115dp">

            <ImageView
                android:id="@+id/userPfpView"
                android:layout_width="115dp"
                android:layout_height="115dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile_black_24dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/userUsernameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/user_viewer_pfp_thing_card"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/follow_btn"
                android:backgroundTint="@color/colour_palate_4"
                android:text="@string/follow" />

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/followers_box" >

                    <TextView android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:text="@string/zero"
                        android:id="@+id/followers_count" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/followers" />

                </LinearLayout>

                <LinearLayout android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/following_box" >

                    <TextView android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:text="@string/zero"
                        android:id="@+id/following_count" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/following" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/userAboutView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/about_input"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:id="@+id/user_posts_recycler" />

</LinearLayout>