<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_pf_card"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="132dp"
        app:layout_constraintEnd_toStartOf="@+id/usernameProfile"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/pfpView"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:src="@drawable/ic_profile_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/usernameProfile"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/username_input"
        android:textAlignment="gravity"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/user_pf_card"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editprofile"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:text="@string/edit_profile"
        app:layout_constraintStart_toEndOf="@+id/user_pf_card"
        app:layout_constraintTop_toBottomOf="@+id/usernameProfile"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/aboutProfile"
        android:layout_width="358dp"
        android:layout_height="132dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pf_card" />
</androidx.constraintlayout.widget.ConstraintLayout>